--- a/index.html
+++ b/index.html
@@ -5,107 +5,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
 	<meta name="description" content="A blurb to describe the content of the page appears here" >
 	<script type="text/javascript" src=""></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="" />
+	<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script-->
+	<script src="js/jquery-1.7.2.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<script type="text/javascript">
 	//Insert JavaScript here
 	</script>
 	<style>
-	/*CSS Styles*/
 	
-		/*Document notes
-		 *The background for #main is temporarily red, which causes it to flash during window resize.
-		 *Have to change it to something subtle, this is temporarily for debugging.
-		 *The Sidebar width is hardcoded both in CSS and the Javascript.
-		 *Any changes to the dimensions/layout have to be adjusted in both.
-		 *The header slice is currently a low quality jpeg and will have to be improved in future.
-		 */
-		 
-		 body {
-			margin: 0px; padding: 0px;
-			background-color: red;
-			font-family: sans-serif;
-		}
-		#header {
-			margin: 0px; padding: 0px;
-			background: url(header-slice.jpg) repeat-x;
-			min-height: 40px;
-			color: white;
-		}
-		ul#header-nav {
-			margin: 0px;
-			padding: 0px 0px 0px 20px;
-			list-style-type: none;
-		}
-		ul#header-nav li {
-			float: left;
-			margin: 0px;
-			padding-left: 3px;
-			padding-right: 3px;			
-			height: 38px;
-		}
-		ul#header-nav a {
-			display: block;
-			margin: 0px;
-			padding: 2px 5px 0px 5px;	
-			height: 40px;
-			color: white;
-			text-indent:-9999px;
-		}
-		ul#header-nav li a {
-			width: 160px;
-			background: url(nav-sprite.png);
-		}
-		ul#header-nav li#buyer a {
-			background-position: -8px -52px;
-		}
-		ul#header-nav li#buyer a:hover {
-			background-position: -8px -8px;
-		}
-		ul#header-nav li#seller a {
-		
-			background-position: -222px -52px;
-		}
-		ul#header-nav li#seller a:hover {
-			background-position: -222px -8px;
-		}
-		ul#header-nav li#blog a {
-			background-position: -426px -52px;
-		}
-		ul#header-nav li#blog a:hover {
-			background-position: -426px -8px;
-		}
-		#main {
-			margin: 0px; padding: 0px;
-			background-color: red;
-		}
-		#content {
-			margin: 0px; padding: 0px;
-			background: #BBBBBB;
-			float: left;
-			width: 500px;
-		}
-		#sidebar {
-			margin: 0px; padding: 0px;
-			padding-left: 15px;
-			background: #111111;
-			float: left;;
-			width: 200px;
-			color: #FFFFFF;
-			border-left: 1px solid black;
-		}
-		#footer {
-			margin: 0px; padding: 0px;
-			height: 30px;
-			color: white;
-			background: #333333 url(footer-slice.jpg) repeat-x;
-			border-top: 2px solid #222222;
-			position: fixed;
-			width: 100%;
-			bottom: 0px;
-			left: 0px;
-		}
-
 	</style>
 	<title>	Some title</title>
 </head>
