--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="A blurb to describe the content of the page appears here" >
 	<script type="text/javascript" src=""></script>
 	<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script-->
-	<script src="js/jquery-1.7.2.min.js"></script>
+	<script src="js/jquery-1.4.2.min.js"></script>
 	<script src="js/slides.min.jquery.js"></script>
 	<script src="js/jquery.waitforimages.js"></script>
 	<script type="text/javascript" src="js/jquery.jcarousel.js"></script>
@@ -14,29 +14,6 @@
 	<link rel="stylesheet" type="text/css" href="css2/style.css" />
 	<link rel="stylesheet" type="text/css" href="css2/nivo-slider.css" />
 	<link rel="stylesheet" type="text/css" href="css2/default/default.css" />
-
-
-	<script type="text/javascript">
-	//Slideshow
-	/*var startSlide = 1;
-	if (window.location.hash) {
-		startSlide = window.location.hash.replace('#', '');
-	}*/
-	//Initialize slides
-
-	/*$('slides').slides ({
-			preload: true,
-			preloadImage: 'images/loading.gif',
-			generatePagination: true;
-			play: 5000,
-			pause: 2500,
-			hoverPause: false,
-			start: startSlide,
-			animationComplete: function(current){
-				window.location.hash = '#' + current;
-				}
-		});*/
-	</script>
 	<style>
 
 	.slides_container {
@@ -75,10 +52,26 @@
 				<div class="slider-wrapper theme-default">
 					<div class="ribbon"></div>
 						<div id="slider" class="nivoSlider">
+						<img src="images/YellowFlower.jpg"/> 
+						<img src="images/FootFall.png"/> 
+						<img src="images/GreenMeadow.jpg"/> 
+						<img src="images/Spaceflare-supernova.jpg"/> 
+						<img src="images/Terraform-green.jpg"/> 
+						<img src="images/Wood.jpg"/> 
+						<img src="images/Blinds.jpg"/> 
+						<img src="images/FreshFlower.jpg"/> 
+						<img src="images/Spaceflare.jpg"/> 
+						<img src="images/SundownDunes.jpg"/> 
+						<img src="images/Terraform-orange.jpg"/> 
+						<img src="images/BlueMarbleWest.jpg"/> 
+						<img src="images/Garden.jpg"/> 
+						<img src="images/Spaceflare-nova.jpg"/> 
+						<img src="images/Terraform-blue.jpg"/> 
+						<img src="images/TwoWings.jpg"/> 
 						<img src="images/splash.jpg" alt="" />
 				<a href="http://dev7studios.com"><img src="images/570x270.gif" alt="" title="This is an example of a caption" /></a>
-						<img src="images/Blinds.jpg" alt="" data-transition="slideInLeft" />
 						<img src="images/Aqua.jpg" alt="" title="#htmlcaption" />
+
 						</div>
 					<div id="htmlcaption" class="nivo-html-caption">
 					<strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.
@@ -90,25 +83,56 @@
 		</div>
 		<div id="sidebar">
 			<p>
-				<a id="slide1">Slide 1</a>
+				<a id="slide1" class="linker">Slide 1</a>
 			</p>
 			<p>
-				<a id="slide2">Slide 2</a>
+				<a id="slide2" class="linker">Slide 2</a>
 			</p>
 			<p>
-				<a id="slide3">Slide 3</a>
+				<a id="slide3" class="linker">Slide 3</a>
 			</p>
 			<p>
-				<a id="slide4">Slide 4</a>
+				<a id="slide4" class="linker">Slide 4</a>
 			</p>
-			<p>
-				The above may be text, but it's clickable text. Click to change the slides
-			</p>
-			</div>
-	</div>
-	<div id="footer">
-		
-	</div>
+		<link href="css2/style_sidebar.css" rel="stylesheet" type="text/css" />
+		<script type="text/javascript" src="js/jquery.jcarousel.js"></script>
+		<link rel="stylesheet" type="text/css" href="css2/skin_sidebar.css" />
+		<script type="text/javascript">
+
+		jQuery(document).ready(function() {
+				    jQuery('#mycarousel').jcarousel({
+					            vertical: true,
+						            scroll: 1
+							        });
+				    });
+		</script>
+		<div id="wrap">
+			<ul id="mycarousel" class="jcarousel jcarousel-skin-tango">
+				<li><img src="images/thumbs/YellowFlower.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/FootFall.png" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/GreenMeadow.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/Spaceflare-supernova.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/Terraform-green.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/Wood.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/Blinds.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/FreshFlower.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/Spaceflare.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/SundownDunes.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/Terraform-orange.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/BlueMarbleWest.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/Garden.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/Spaceflare-nova.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/Terraform-blue.jpg" width="75" height="75" alt="" /></li>
+				<li><img src="images/thumbs/TwoWings.jpg" width="75" height="75" alt="" /></li>
+			</ul>
+
+		</div>
+		</div>
+
+		</div>
+		<div id="footer">
+
+		</div>
 
 	<script type="text/javascript" src="js/jquery.nivo.slider.js"></script>
 	<script type="text/javascript">
@@ -132,37 +156,23 @@
 					marginLeft: mleft,
 					marginTop: mtop
 					}, 120);
-			//$active.css("margin-left", mleft).css("margin-top", mtop);
 		}
-
-	//	$('#slides').slides({
-	//			//generatePagination: True
-	//			});
 		$('#slides').slides({
-				//preload: true,
-				//preloadImage: 'img/loading.gif',
-				//generatePagination: true,
-				//play: 5000,
-				//pause: 2500,
-				//hoverPause: true,
-				// Get the starting slide
-				//start: startSlide,
-				animationComplete: function(current){
-					// Set the slide number as a hash
-					window.location.hash = '#' + current;
-					var ht=$window.height()-70,
-					wd=$window.width()-216;
-					slideAdjust(wd, ht);
-					}
-					
-				});	
+			animationComplete: function(current){
+			// Set the slide number as a hash
+			window.location.hash = '#' + current;
+			var ht=$window.height()-70,
+			wd=$window.width()-216;
+			slideAdjust(wd, ht);
+			}
+			});     
+
 		$document.ready(function(){
 			var ht=$window.height()-70,
 			wd=$window.width()-216;
 			$main.css('height', ht);
 			$content.css('width', wd).css('min-height', ht);
 			$slidebox.css('width', wd).css('min-height', ht);
-			//$slidediv.css('width', wd).css('min-height', ht);
 			$sidebar.css('min-height', ht).css('height', ht);
 			$('.pagination').css('display', 'none');
 
@@ -183,20 +193,6 @@
 			$sidebar.css('min-height', ht);
 			slideAdjust(wd, ht);
 		});
-	/*	$sidebar.find('a#slide1').click(function() {
-				$('.pagination a').eq(0).trigger('click');
-				});
-		$sidebar.find('a#slide2').click(function() {
-				$('.pagination a').eq(1).trigger('click');
-				});
-		$sidebar.find('a#slide3').click(function() {
-				$('.pagination a').eq(2).trigger('click');
-				});
-		$sidebar.find('a#slide4').click(function() {
-				$('.pagination a').eq(3).trigger('click');
-				});
-		
-	*/	
 	</script>
 </body>
 </html>
