--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
 			<div id="slides">
 				<div class="slides_container">
 					<div class="slide">
-						<img src="http://placehold.it/570x270">
+						<img src="images/570x270.gif">
 					</div>
 					<div class="slide">
-						<img src="http://placehold.it/570x270">
+						<img src="images/570x270.gif">
 					</div>
 					<div class="slide">
-						<img src="http://placehold.it/570x270">
+						<img src="images/570x270.gif">
 					</div>
 					<div class="slide">
-						<img src="http://placehold.it/570x270">
+						<img src="images/570x270.gif">
 					</div>
 
 				</div>
