--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
 				<div class="slider-wrapper theme-default">
 					<div class="ribbon"></div>
 						<div id="slider" class="nivoSlider">
-						<img src="images/1920x1024.jpg" id="a1" /> 
+						<img src="images/1920x1024.jpg" /> 
 						<img src="images/thumbs/YellowFlower.jpg"/> 
 						<img src="images/FootFall.png"/> 
 						<img src="images/GreenMeadow.jpg"/> 
