--- a/experiment.html
+++ b/experiment.html
@@ -28,14 +28,6 @@
 			<link href="css2/style_sidebar.css" rel="stylesheet" type="text/css" />
 			<script type="text/javascript" src="js/jquery.jcarousel.js"></script>
 			<link rel="stylesheet" type="text/css" href="css2/skin_sidebar.css" />
-			<script type="text/javascript">
-			jQuery(document).ready(function() {
-					    jQuery('#mycarousel').jcarousel({
-						            vertical: true,
-							    scroll: 1
-								        });
-					    });
-			</script>
 			<div id="wrap">
 				<ul id="mycarousel" class="jcarousel jcarousel-skin-tango">
 					<li><img src="images/1920x1024.jpg" width="75" height="75" alt="" /></li>
@@ -57,6 +49,8 @@
 					<li><img src="images/thumbs/TwoWings.jpg" width="75" height="75" alt="" /></li>
 				</ul>
 			</div>
+			<script type="text/javascript">
+			</script>
 		</div>
 		<div id="content" style="overflow: hidden">
 			<div id="wrapper">
@@ -106,6 +100,13 @@
 
 	<script type="text/javascript" src="js/jquery.nivo.slider.js"></script>
 	<script type="text/javascript">
+			$('#wrap').height(($('#content').height())-120);
+			jQuery(document).ready(function() {
+					    jQuery('#mycarousel').jcarousel({
+						            vertical: true,
+							    scroll: 1
+								        });
+					    });
 	var $footer=$('#footer');
 		$(document).ready(function(){
 			
@@ -126,6 +127,7 @@
 			});
 		});		
 		$(window).resize(function() {
+			$('#wrap').height(($('#content').height())-120);
 				var slider=$('#slider');
 				$content=$('#content');
 			        var vars = slider.data('nivo:vars');
