$('#top').height($('#content').height()-200));

--- a/p1.html
+++ b/p1.html
@@ -86,6 +86,7 @@
 <script type="text/javascript">
 	$footer=$('#footer');
 	$(document).ready(function(){
+		$('#top').height($('#content').height()-200));
 		$footer.on('click', function(){
 					// console.log('Footer clicked');
 					if($footer.css('height')=='30px'){
